Changed the names of the style classes + minor fix spacing between messages

--- a/FRONTEND/mesajePage/src/stretched_menu.css
+++ b/FRONTEND/mesajePage/src/stretched_menu.css
@@ -1,5 +1,5 @@
 
-.smenu{
+.msg_smenu{
     background-color: white;
     width: 5%;
     overflow-y: hidden;
@@ -9,7 +9,7 @@
     margin: 0;
   }
   
-  h1{
+  .msg_h1{
     font-family: 'Viga';
     margin:0 auto;
     display: flex;
@@ -20,7 +20,7 @@
     display: flex;
     justify-content: center;
   }
-  .sgrid_container{
+  .msg_sgrid_container{
     display: grid;
     grid-template-rows: repeat(4,1fr);
     gap: 20px;
@@ -29,7 +29,7 @@
    margin-top: 70%;
   }
   
-  .sgrid-item {
+  .msg_sgrid-item {
     display: flex;
     align-items: center;
     justify-content: center;
